# SnakeCC

./: LICENSE  README.md  pyproject.toml
scratch/: main.c
snakecc/: main.py
snakecc/lexer/: lexer.py
tests/lexer/: test_lexer.py
