[tool.poetry]
name = "snakecc"
version = "0.1.0"
description = ""
authors = ["Tom Stevens <tomjstevens9@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.5"
pytest = "^8.2.1"
ipdb = "^0.13.13"
ipython = "^8.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
